# wabi-sabi-wisdom

./: .gitignore  README.md  catalog_data.csv  env.example  main.py  pyproject.toml
.cursor/rules/: ai-algorithms.mdc  ai-content-guidelines.mdc  business-requirements.mdc  coding-standards.mdc  development-phases.mdc  project-overview.mdc  tech-stack.mdc
docs/: Character_Generation_Algorithm.md  Dynamic_Source_Selection_Algorithm_Doc.md  Emotion_Based_Onboarding_Questions.md  Emotion_Based_Onboarding_Questions_Japanese.md  Example_Flow_Character_to_Voice.md  Kingo_AI_Dispatch_Algorithm_Spec.md  Narrative_Engine_Spec.md  Public_Domain_Sources_1_1_50.md  Public_Domain_Sources_2_51_100.md  Quote_Algorithm_With_Meaning.md  Voice_Synthesis_Algorithm.md  Wabi_Sabi_Wisdom_Full_Development_Guide.md  Wabi_Sabi_Wisdom_MVP_Documentation.md  Wabi_Sabi_Wisdom_Post_MVP_Roadmap.md  ai_wisdom_app_3_c_analysis.md  ai_wisdom_app_business_plan_full.md  ai_wisdom_app_full_analysis.md  ai_wisdom_app_revenue_sim.md  app_name_marketing_messages.md  public_domain_sources_3_101_150.md
scripts/: add_more_works.py  create_catalog_csv.py  create_classical_wisdom_base.py  import_from_csv.py  test_supabase_connection.py
scripts/utils/: data_models.py  supabase_client.py
